--- a/for-ddy-main/for-ddy-main/config.json
+++ b/for-ddy-main/for-ddy-main/config.json
@@ -1,7 +1,8 @@
 {
-    "token": "",
+    "token": "NzgwNDY1MTg3MjY1NzA4MDYz",
     "prefix": "x",
-    "wizzname": "DAKARI OVER EVERYONE"
+    "wizzname": " 780465187265708063"
 
 }	
+
     
